# UniversalMediaPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  app.py  config.py
CMake/: FindLIBVLC.cmake
MPlayer/: __init__.py
MainServer/: Stream.py  __init__.py  utils.py
lib/mongoose/: CMakeLists.txt  README.md
src/: HTTPServer.cpp  HTTPServer.h  main.cpp
src/HTTPServer/: HTTPServer.cpp  HTTPServer.h
test/: http_echo.cpp
test/video/: README.md
utils/: file.py  logger.py
